Actualización del fichero pom